--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -100,12 +100,6 @@
     <string name="drop_off_time_label">Entrega</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
     <string name="drop_off_same_as_pick_up">¡Próximamente! Estamos trabajando para añadir reservas de coche de alquiler con recogida y entrega en distintas ubicaciones a la próxima versión.</string>
-    <!-- Error messge for missing Origin in search form -->
-    <string name="error_missing_origin_param">Falta el origen</string>
-    <!-- Error messge for missing Start date in search form -->
-    <string name="error_missing_start_date_param">Falta la fecha de inicio</string>
-    <!-- Error messge for missing End date date in search form -->
-    <string name="error_missing_end_date_param">Falta la fecha de finalización</string>
     <!-- Car search error -->
     <string name="error_car_search_message">No se han obtenido resultados. Cambia los criterios de búsqueda.</string>
     <!-- Checkout -->
@@ -149,8 +143,6 @@
     <string name="successful_checkout_email_label">Itinerario enviado a</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Instrucciones para llegar a %1$s</string>
-    <!-- Button label for calling customer support -->
-    <string name="call_customer_support">Llamar al servicio de asistencia</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -216,8 +208,6 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget location hint -->
-    <string name="lx_search_location_hint">Introduce una ubicación</string>
     <!-- Search widget header text -->
     <string name="lx_search_widget_heading">Fechas y ubicación</string>
     <!-- Button to show calendar and selected dates -->
@@ -234,18 +224,18 @@
     <string name="exclusions_activity_details">No incluido</string>
     <!-- Activity details know before you book heading -->
     <string name="know_before_you_book_activity_details">Información importante</string>
-    <!-- Activity details cancellation heading -->
-    <string name="cancellation_activity_details">Cancelación</string>
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
+    <!-- Template for ticket details without restrictions (eg: $40 Traveler) -->
+    <string name="ticket_details_no_restriction_TEMPLATE">%1$s %2$s</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">Reserva ya por %1$s</string>
-    <!-- Template for tickets type and count  summary -->
-    <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
+    <string name="offer_book_now_TEMPLATE">Reserva por %1$s</string>
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
     <string name="cancellation_policy_TEMPLATE">Puedes cancelar gratis hasta %1$s antes de que comience la reserva. Una vez pasado ese tiempo, no es posible realizar cancelaciones, cambios o reembolsos.</string>
+    <!-- Cancellation policy text for non-cancellable activities -->
+    <string name="lx_policy_non_cancellable">Esta reserva no es reembolsable y no puede modificarse o cancelarse después de haberse confirmado.</string>
     <!-- LX checkout cost breakdown total due today -->
     <string name="lx_cost_breakdown_due_today">A pagar hoy</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -256,6 +246,8 @@
     <string name="lx_checkout_breakdown_price_disclaimer_text">Las tarifas aparecen en %s.</string>
     <!-- Checkout price breakdown Total Price Label -->
     <string name="checkout_breakdown_total_price">Precio total</string>
+    <!-- Text for error toolbar-->
+    <string name="lx_price_change_text">El precio ha cambiado</string>
     <!-- LX Ticket type names -->
     <string name="ticket_type_traveler">Viajero</string>
     <string name="ticket_type_adult">Adulto</string>
@@ -303,6 +295,191 @@
     <string name="ticket_type_electric_bike">Bici eléctrica</string>
     <string name="ticket_type_segway">Segway</string>
     <string name="ticket_type_vehicle">Vehículo</string>
+    <!-- LX Ticket type Plurals -->
+    <plurals name="ticket_type_traveler_TEMPLATE">
+        <item quantity="one">%1$s viajero</item>
+        <item quantity="other">%1$s viajeros</item>
+    </plurals>
+    <plurals name="ticket_type_adult_TEMPLATE">
+        <item quantity="one">%1$s adulto</item>
+        <item quantity="other">%1$s adultos</item>
+    </plurals>
+    <plurals name="ticket_type_child_TEMPLATE">
+        <item quantity="one">%1$s niño</item>
+        <item quantity="other">%1$s niños</item>
+    </plurals>
+    <plurals name="ticket_type_infant_TEMPLATE">
+        <item quantity="one">%1$s bebé</item>
+        <item quantity="other">%1$s bebés</item>
+    </plurals>
+    <plurals name="ticket_type_youth_TEMPLATE">
+        <item quantity="one">%1$s joven</item>
+        <item quantity="other">%1$s jóvenes</item>
+    </plurals>
+    <plurals name="ticket_type_senior_TEMPLATE">
+        <item quantity="one">%1$s mayor</item>
+        <item quantity="other">%1$s mayores</item>
+    </plurals>
+    <plurals name="ticket_type_group_TEMPLATE">
+        <item quantity="one">%1$s grupo</item>
+        <item quantity="other">%1$s grupos</item>
+    </plurals>
+    <plurals name="ticket_type_couple_TEMPLATE">
+        <item quantity="one">%1$s pareja</item>
+        <item quantity="other">%1$s parejas</item>
+    </plurals>
+    <plurals name="ticket_type_two_adults_TEMPLATE">
+        <item quantity="one">%1$s 2 adultos</item>
+        <item quantity="other">%1$s 2 adultos</item>
+    </plurals>
+    <plurals name="ticket_type_military_TEMPLATE">
+        <item quantity="one">%1$s militar</item>
+        <item quantity="other">%1$s militares</item>
+    </plurals>
+    <plurals name="ticket_type_student_TEMPLATE">
+        <item quantity="one">%1$s estudiante</item>
+        <item quantity="other">%1$s estudiantes</item>
+    </plurals>
+    <plurals name="ticket_type_sedan_TEMPLATE">
+        <item quantity="one">%1$s sedán</item>
+        <item quantity="other">%1$s sedanes</item>
+    </plurals>
+    <plurals name="ticket_type_minivan_TEMPLATE">
+        <item quantity="one">%1$s monovolumen</item>
+        <item quantity="other">%1$s monovolúmenes</item>
+    </plurals>
+    <plurals name="ticket_type_water_taxi_TEMPLATE">
+        <item quantity="one">%1$s taxi acuático</item>
+        <item quantity="other">%1$s taxis acuáticos</item>
+    </plurals>
+    <plurals name="ticket_type_suv_TEMPLATE">
+        <item quantity="one">%1$s todoterreno</item>
+        <item quantity="other">%1$s todoterrenos</item>
+    </plurals>
+    <plurals name="ticket_type_executive_car_TEMPLATE">
+        <item quantity="one">%1$s coche ejecutivo</item>
+        <item quantity="other">%1$s coches ejecutivos</item>
+    </plurals>
+    <plurals name="ticket_type_luxury_car_TEMPLATE">
+        <item quantity="one">%1$s coche de lujo</item>
+        <item quantity="other">%1$s coches de lujo</item>
+    </plurals>
+    <plurals name="ticket_type_limousine_TEMPLATE">
+        <item quantity="one">%1$s limusina</item>
+        <item quantity="other">%1$s limusinas</item>
+    </plurals>
+    <plurals name="ticket_type_towncar_TEMPLATE">
+        <item quantity="one">%1$s limusina</item>
+        <item quantity="other">%1$s limusinas</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_parking_spot_TEMPLATE">
+        <item quantity="one">%1$s plaza de aparcamiento para vehículo</item>
+        <item quantity="other">%1$s plazas de aparcamiento para vehículo</item>
+    </plurals>
+    <plurals name="ticket_type_book_TEMPLATE">
+        <item quantity="one">%1$s libro</item>
+        <item quantity="other">%1$s libros</item>
+    </plurals>
+    <plurals name="ticket_type_guide_TEMPLATE">
+        <item quantity="one">%1$s guía</item>
+        <item quantity="other">%1$s guías</item>
+    </plurals>
+    <plurals name="ticket_type_travel_card_TEMPLATE">
+        <item quantity="one">%1$s tarjeta de viaje</item>
+        <item quantity="other">%1$s tarjetas de viaje</item>
+    </plurals>
+    <plurals name="ticket_type_boat_TEMPLATE">
+        <item quantity="one">%1$s bote</item>
+        <item quantity="other">%1$s botes</item>
+    </plurals>
+    <plurals name="ticket_type_motorcycle_TEMPLATE">
+        <item quantity="one">%1$s motocicleta</item>
+        <item quantity="other">%1$s motocicletas</item>
+    </plurals>
+    <plurals name="ticket_type_ceremony_TEMPLATE">
+        <item quantity="one">%1$s ceremonia</item>
+        <item quantity="other">%1$s ceremonias</item>
+    </plurals>
+    <plurals name="ticket_type_calling_card_TEMPLATE">
+        <item quantity="one">%1$s tarjeta telefónica</item>
+        <item quantity="other">%1$s tarjetas telefónicas</item>
+    </plurals>
+    <plurals name="ticket_type_pass_TEMPLATE">
+        <item quantity="one">%1$s pase</item>
+        <item quantity="other">%1$s pases</item>
+    </plurals>
+    <plurals name="ticket_type_minibus_TEMPLATE">
+        <item quantity="one">%1$s minibús</item>
+        <item quantity="other">%1$s minibuses</item>
+    </plurals>
+    <plurals name="ticket_type_helicopter_TEMPLATE">
+        <item quantity="one">%1$s helicóptero</item>
+        <item quantity="other">%1$s helicópteros</item>
+    </plurals>
+    <plurals name="ticket_type_device_TEMPLATE">
+        <item quantity="one">%1$s dispositivo</item>
+        <item quantity="other">%1$s dispositivos</item>
+    </plurals>
+    <plurals name="ticket_type_room_TEMPLATE">
+        <item quantity="one">%1$s habitación</item>
+        <item quantity="other">%1$s habitaciones</item>
+    </plurals>
+    <plurals name="ticket_type_carriage_TEMPLATE">
+        <item quantity="one">%1$s carruaje</item>
+        <item quantity="other">%1$s carruajes</item>
+    </plurals>
+    <plurals name="ticket_type_buggy_TEMPLATE">
+        <item quantity="one">%1$s buggy</item>
+        <item quantity="other">%1$s buggies</item>
+    </plurals>
+    <plurals name="ticket_type_atv_TEMPLATE">
+        <item quantity="one">%1$s cuatriciclo</item>
+        <item quantity="other">%1$s cuatriciclos</item>
+    </plurals>
+    <plurals name="ticket_type_jet_ski_TEMPLATE">
+        <item quantity="one">%1$s moto acuática</item>
+        <item quantity="other">%1$s motos acuáticas</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_TEMPLATE">
+        <item quantity="one">%1$s scooter</item>
+        <item quantity="other">%1$s scooters</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_car_TEMPLATE">
+        <item quantity="one">%1$s coche scooter</item>
+        <item quantity="other">%1$s coches scooter</item>
+    </plurals>
+    <plurals name="ticket_type_snowmobile_TEMPLATE">
+        <item quantity="one">%1$s motonieve</item>
+        <item quantity="other">%1$s motonieve</item>
+    </plurals>
+    <plurals name="ticket_type_day_TEMPLATE">
+        <item quantity="one">%1$s día</item>
+        <item quantity="other">%1$s días</item>
+    </plurals>
+    <plurals name="ticket_type_bike_TEMPLATE">
+        <item quantity="one">%1$s bicicleta</item>
+        <item quantity="other">%1$s bicicletas</item>
+    </plurals>
+    <plurals name="ticket_type_week_TEMPLATE">
+        <item quantity="one">%1$s semana</item>
+        <item quantity="other">%1$s semanas</item>
+    </plurals>
+    <plurals name="ticket_type_subscription_TEMPLATE">
+        <item quantity="one">%1$s suscripción</item>
+        <item quantity="other">%1$s suscripciones</item>
+    </plurals>
+    <plurals name="ticket_type_electric_bike_TEMPLATE">
+        <item quantity="one">%1$s bici eléctrica</item>
+        <item quantity="other">%1$s bicis eléctricas</item>
+    </plurals>
+    <plurals name="ticket_type_segway_TEMPLATE">
+        <item quantity="one">%1$s segway</item>
+        <item quantity="other">%1$s segways</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_TEMPLATE">
+        <item quantity="one">%1$s vehículo</item>
+        <item quantity="other">%1$s vehículos</item>
+    </plurals>
     <!-- Activity search results per ticket type -->
     <string name="per_ticket_type_traveler">por viajero</string>
     <string name="per_ticket_type_adult">por adulto</string>
@@ -361,7 +538,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">No se han obtenido resultados. Cambia los criterios de búsqueda.</string> 
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">No se han obtenido resultados para la búsqueda en esta ubicación. Cambia los criterios de búsqueda.</string> 
+    <string name="error_lx_current_location_search_message">No hemos podido determinar tu ubicación, por lo que no es posible mostrarte las actividades más cercanas.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Se ha producido un error</string>
     <!-- Text for error toolbar-->
@@ -380,8 +557,6 @@
     <string name="lx_traveler_enter_details_text">Introduce los datos del viajero</string>
     <!-- Text for lx sort and filter-->
     <string name="lx_sort_filter">Ordenar y filtrar</string>
-    <!-- Read more of the review -->
-    <string name="lx_details_read_more">Seguir leyendo</string>
     <!--Price sort button -->
     <string name="lx_price_sort_button">Precio</string>
     <!-- Popularity sort button -->
@@ -392,8 +567,20 @@
     <string name="lx_free_cancellation">Cancelación gratuita</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
     <string name="lx_does_not_accept_cardtype_TEMPLATE">No es posible aceptar %1$s</string>
-    <!-- Edit search toolbar title -->
-    <string name="edit_search_toolbar">Editar búsqueda</string>
+    <!-- LX Error Activity Price Changed -->
+    <string name="lx_error_price_changed">Lo sentimos, pero el precio de esta actividad ha cambiado. Vuelve a intentarlo.</string>
+    <!-- LX confirmation itin text -->
+    <string name="lx_successful_checkout_email_label">Hemos enviado tus billetes a</string>
+    <!-- LX reservation confirmation text -->
+    <string name="lx_successful_checkout_reservation_label">¡Tu reserva está confirmada!</string>
+    <!-- Text for getting current location suggestion -->
+    <string name="lx_getting_current_location">Buscando ubicación…</string>
+    <!-- LX Error Fetching activity details -->
+    <string name="lx_error_details">No es posible recuperar los datos. Vuelve a intentarlo.</string>
+    <!-- Current location failed toolbar text -->
+    <string name="lx_error_current_location_toolbar_text">Vuelve a intentarlo.</string>
+    <!-- LX No Activities for Current location -->
+    <string name="lx_error_current_location_no_results">No hemos encontrado ninguna actividad cercana. Cambia los criterios de búsqueda.</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -486,6 +673,15 @@
         <item quantity="many">Elementos de viaje</item>
         <item quantity="other">Elementos de viaje</item>
     </plurals>
+
+    <!-- LX Sort & Filter "Apply" header -->
+    <string name="lx_apply_sort_filter">Canjear</string>
+    <!-- LX Sort & Filter "Sort By" section header -->
+    <string name="lx_sort_by">Ordenar por</string>
+    <!-- LX Sort & Filter "Categories" header -->
+    <string name="lx_categories">Categorías</string>
+    <!-- LX Sort & Filter "Filter" header -->
+    <string name="lx_filter">Filtrar</string>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -676,6 +872,8 @@
     <string name="nav_hotels">Hoteles</string>
     <!-- Cars -->
     <string name="nav_cars">Vehículos</string>
+    <!-- Activities -->
+    <string name="nav_lx">Actividades</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -686,21 +884,15 @@
     <string name="percent_off_TEMPLATE">-%2.0f%%</string>
     <!-- List loading header -->
     <string name="loading_header">Cargando…</string>
-    <!-- Hotel list rating text -->
+    <!-- Hotel launch list rating text -->
     <string name="hotel_rating_text">de 5 - Puntuación de los huéspedes</string>
-    <!-- Hotel list no rating text -->
-    <string name="hotel_no_rating_text">Sin puntuación de los huéspedes</string>
+    <!-- Hotel search list rating text -->
+    <string name="hotel_search_rating_text">de 5</string>
     <!-- Expedia Deal for a given property, Mobile exclusive -->
     <string name="launch_mobile_exclusive">Solo móvil</string>
     <!-- Expedia Deal for a given property, tonight only -->
     <string name="launch_tonight_only">¡Solo durante esta noche!</string>
 
-
-    <!-- Launch screen -->
-    <!-- Label for flight destination tile from launch screen e.g. Fly to San Francisco -->
-    <string name="launch_flight_tile_prompt">&lt;font color="#b2b2b2"&gt;Vuela a&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
-    <!-- Label for hotel destination tile from launch screen e.g. Stay in New York -->
-    <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;Alójate en&lt;/font&gt;&lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">No ha sido posible conectarse</string>
     <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
@@ -765,8 +957,8 @@
     <!-- Itineraries -->
     <!-- Itinerary -->
     <string name="itinerary">Itinerario</string>
-    <!-- Shop -->
-    <string name="shop">Comprar</string>
+    <!-- Shop Travel - used on launch screen tab, so can't be too long -->
+    <string name="shop_travel">Comprar viaje</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Encontrar itinerario</string>
     <!-- Enter Itinerary Details -->
@@ -788,7 +980,7 @@
     <!-- Error fetching itinerary -->
     <string name="itinerary_fetch_error">No se han podido recuperar los itinerarios</string>
     <!-- Sign in for your trips -->
-    <string name="sign_in_for_your_trips">&lt;b&gt;Inicia sesión&lt;/b&gt; para ver tus viajes</string>
+    <string name="sign_in_for_your_trips">Inicia sesión para ver tus viajes</string>
     <!-- String for Tomorrow as in "Marriott Grand Hotel - Tomorrow" -->
     <string name="tomorrow">Mañana</string>
     <!-- String for Today as in "Marriott Grand Hotel - Today" -->
@@ -1863,8 +2055,12 @@
     <string name="itinerary_confirmation_TEMPLATE">Hemos enviado el itinerario número %s a la dirección</string>
     <!-- Title for section helping users get hotel rooms after booking a flight -->
     <string name="get_a_room">Reservar una habitación</string>
+    <!-- Title for section helping users get hotel rooms and cars after booking a flight -->
+    <string name="add_to_your_trip">Añadir al viaje</string>
     <!-- Button label for getting hotels at a particular location.  %s is a location, e.g. "Hotels in San Francisco" -->
     <string name="hotels_in_TEMPLATE">Hoteles en %s</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
+    <string name="cars_in_TEMPLATE">Coches en %s</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">Más</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
