--- a/project/src/main/res/values-nb/strings.xml
+++ b/project/src/main/res/values-nb/strings.xml
@@ -100,12 +100,6 @@
     <string name="drop_off_time_label">Avlevering</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
     <string name="drop_off_same_as_pick_up">Kommer snart! Vi jobber hardt for å legge til enveisbestillinger i en kommende versjon.</string>
-    <!-- Error messge for missing Origin in search form -->
-    <string name="error_missing_origin_param">Avreisested mangler</string>
-    <!-- Error messge for missing Start date in search form -->
-    <string name="error_missing_start_date_param">Startdato mangler</string>
-    <!-- Error messge for missing End date date in search form -->
-    <string name="error_missing_end_date_param">Sluttdato mangler</string>
     <!-- Car search error -->
     <string name="error_car_search_message">Søket ditt ga ingen resultater. Prøv å søke på nytt med andre søkekriterer.</string>
     <!-- Checkout -->
@@ -149,8 +143,6 @@
     <string name="successful_checkout_email_label">Reiserute ble sendt til</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Veibeskrivelse til %1$s</string>
-    <!-- Button label for calling customer support -->
-    <string name="call_customer_support">Ring kundeservice</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -216,8 +208,6 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget location hint -->
-    <string name="lx_search_location_hint">Oppgi sted</string>
     <!-- Search widget header text -->
     <string name="lx_search_widget_heading">Dato og sted</string>
     <!-- Button to show calendar and selected dates -->
@@ -234,18 +224,18 @@
     <string name="exclusions_activity_details">Ikke inkludert</string>
     <!-- Activity details know before you book heading -->
     <string name="know_before_you_book_activity_details">Viktig å vite før du bestiller</string>
-    <!-- Activity details cancellation heading -->
-    <string name="cancellation_activity_details">Avbestilling</string>
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
+    <!-- Template for ticket details without restrictions (eg: $40 Traveler) -->
+    <string name="ticket_details_no_restriction_TEMPLATE">%1$s %2$s</string>
     <!-- Template for ticket selection summary -->
     <string name="offer_book_now_TEMPLATE">Bestill nå %1$s</string>
-    <!-- Template for tickets type and count  summary -->
-    <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
     <string name="cancellation_policy_TEMPLATE">Du kan avbestille uten ekstra kostnad frem til %1$s før starttidspunktet for bestillingen din. Etter dette vil det ikke være mulig å utføre avbestillinger, endringer eller refusjoner.</string>
+    <!-- Cancellation policy text for non-cancellable activities -->
+    <string name="lx_policy_non_cancellable">Denne bestillingen er ikke-refunderbar og kan ikke endres eller kanselleres etter at den er utført.</string>
     <!-- LX checkout cost breakdown total due today -->
     <string name="lx_cost_breakdown_due_today">Må betales i dag</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -256,6 +246,8 @@
     <string name="lx_checkout_breakdown_price_disclaimer_text">Prisene vises i %s.</string>
     <!-- Checkout price breakdown Total Price Label -->
     <string name="checkout_breakdown_total_price">Totalpris</string>
+    <!-- Text for error toolbar-->
+    <string name="lx_price_change_text">Pris er endret</string>
     <!-- LX Ticket type names -->
     <string name="ticket_type_traveler">Reisende</string>
     <string name="ticket_type_adult">Voksen</string>
@@ -303,6 +295,191 @@
     <string name="ticket_type_electric_bike">Elektrisk sykkel</string>
     <string name="ticket_type_segway">Segway</string>
     <string name="ticket_type_vehicle">Kjøretøy</string>
+    <!-- LX Ticket type Plurals -->
+    <plurals name="ticket_type_traveler_TEMPLATE">
+        <item quantity="one">%1$s reisende</item>
+        <item quantity="other">%1$s reisende</item>
+    </plurals>
+    <plurals name="ticket_type_adult_TEMPLATE">
+        <item quantity="one">%1$s voksen</item>
+        <item quantity="other">%1$s voksne</item>
+    </plurals>
+    <plurals name="ticket_type_child_TEMPLATE">
+        <item quantity="one">%1$s barn</item>
+        <item quantity="other">%1$s barn</item>
+    </plurals>
+    <plurals name="ticket_type_infant_TEMPLATE">
+        <item quantity="one">%1$s spedbarn</item>
+        <item quantity="other">%1$s spedbarn</item>
+    </plurals>
+    <plurals name="ticket_type_youth_TEMPLATE">
+        <item quantity="one">%1$s ungdom</item>
+        <item quantity="other">%1$s ungdommer</item>
+    </plurals>
+    <plurals name="ticket_type_senior_TEMPLATE">
+        <item quantity="one">%1$s senior</item>
+        <item quantity="other">%1$s seniorer</item>
+    </plurals>
+    <plurals name="ticket_type_group_TEMPLATE">
+        <item quantity="one">%1$s gruppe</item>
+        <item quantity="other">%1$s grupper</item>
+    </plurals>
+    <plurals name="ticket_type_couple_TEMPLATE">
+        <item quantity="one">%1$s par</item>
+        <item quantity="other">%1$s par</item>
+    </plurals>
+    <plurals name="ticket_type_two_adults_TEMPLATE">
+        <item quantity="one">%1$s 2 voksne</item>
+        <item quantity="other">%1$s 2 voksne</item>
+    </plurals>
+    <plurals name="ticket_type_military_TEMPLATE">
+        <item quantity="one">%1$s militær</item>
+        <item quantity="other">%1$s militære</item>
+    </plurals>
+    <plurals name="ticket_type_student_TEMPLATE">
+        <item quantity="one">%1$s student</item>
+        <item quantity="other">%1$s studenter</item>
+    </plurals>
+    <plurals name="ticket_type_sedan_TEMPLATE">
+        <item quantity="one">%1$s sedan</item>
+        <item quantity="other">%1$s sedaner</item>
+    </plurals>
+    <plurals name="ticket_type_minivan_TEMPLATE">
+        <item quantity="one">%1$s liten varebil</item>
+        <item quantity="other">%1$s små varebiler</item>
+    </plurals>
+    <plurals name="ticket_type_water_taxi_TEMPLATE">
+        <item quantity="one">%1$s vanntaxi</item>
+        <item quantity="other">%1$s vanntaxier</item>
+    </plurals>
+    <plurals name="ticket_type_suv_TEMPLATE">
+        <item quantity="one">%1$s SUV</item>
+        <item quantity="other">%1$s SUV-er</item>
+    </plurals>
+    <plurals name="ticket_type_executive_car_TEMPLATE">
+        <item quantity="one">%1$s executive-bil</item>
+        <item quantity="other">%1$s executive-biler</item>
+    </plurals>
+    <plurals name="ticket_type_luxury_car_TEMPLATE">
+        <item quantity="one">%1$s luksusbil</item>
+        <item quantity="other">%1$s luksubiler</item>
+    </plurals>
+    <plurals name="ticket_type_limousine_TEMPLATE">
+        <item quantity="one">%1$s limousin</item>
+        <item quantity="other">%1$s limousiner</item>
+    </plurals>
+    <plurals name="ticket_type_towncar_TEMPLATE">
+        <item quantity="one">%1$s bybil</item>
+        <item quantity="other">%1$s bybiler</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_parking_spot_TEMPLATE">
+        <item quantity="one">%1$s parkeringsplass</item>
+        <item quantity="other">%1$s parkeringsplasser</item>
+    </plurals>
+    <plurals name="ticket_type_book_TEMPLATE">
+        <item quantity="one">%1$s bok</item>
+        <item quantity="other">%1$s bøker</item>
+    </plurals>
+    <plurals name="ticket_type_guide_TEMPLATE">
+        <item quantity="one">%1$s guide</item>
+        <item quantity="other">%1$s guider</item>
+    </plurals>
+    <plurals name="ticket_type_travel_card_TEMPLATE">
+        <item quantity="one">%1$s reisekort</item>
+        <item quantity="other">%1$s reisekort</item>
+    </plurals>
+    <plurals name="ticket_type_boat_TEMPLATE">
+        <item quantity="one">%1$s båt</item>
+        <item quantity="other">%1$s båter</item>
+    </plurals>
+    <plurals name="ticket_type_motorcycle_TEMPLATE">
+        <item quantity="one">%1$s motorsykkel</item>
+        <item quantity="other">%1$s motorsykler</item>
+    </plurals>
+    <plurals name="ticket_type_ceremony_TEMPLATE">
+        <item quantity="one">%1$s seremoni</item>
+        <item quantity="other">%1$s seremonier</item>
+    </plurals>
+    <plurals name="ticket_type_calling_card_TEMPLATE">
+        <item quantity="one">%1$s ringekort</item>
+        <item quantity="other">%1$s ringekort</item>
+    </plurals>
+    <plurals name="ticket_type_pass_TEMPLATE">
+        <item quantity="one">%1$s pass</item>
+        <item quantity="other">%1$s pass</item>
+    </plurals>
+    <plurals name="ticket_type_minibus_TEMPLATE">
+        <item quantity="one">%1$s minibuss</item>
+        <item quantity="other">%1$s minibusser</item>
+    </plurals>
+    <plurals name="ticket_type_helicopter_TEMPLATE">
+        <item quantity="one">%1$s helikopter</item>
+        <item quantity="other">%1$s helikoptre</item>
+    </plurals>
+    <plurals name="ticket_type_device_TEMPLATE">
+        <item quantity="one">%1$s enhet</item>
+        <item quantity="other">%1$s enheter</item>
+    </plurals>
+    <plurals name="ticket_type_room_TEMPLATE">
+        <item quantity="one">%1$s rom</item>
+        <item quantity="other">%1$s rom</item>
+    </plurals>
+    <plurals name="ticket_type_carriage_TEMPLATE">
+        <item quantity="one">%1$s vogn</item>
+        <item quantity="other">%1$s vogner</item>
+    </plurals>
+    <plurals name="ticket_type_buggy_TEMPLATE">
+        <item quantity="one">%1$s barnevogn</item>
+        <item quantity="other">%1$s barnevogner</item>
+    </plurals>
+    <plurals name="ticket_type_atv_TEMPLATE">
+        <item quantity="one">%1$s terrengbil</item>
+        <item quantity="other">%1$s terrengbiler</item>
+    </plurals>
+    <plurals name="ticket_type_jet_ski_TEMPLATE">
+        <item quantity="one">%1$s vannscooter</item>
+        <item quantity="other">%1$s vannscootere</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_TEMPLATE">
+        <item quantity="one">%1$s scooter</item>
+        <item quantity="other">%1$s scootere</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_car_TEMPLATE">
+        <item quantity="one">%1$s scooter-bil</item>
+        <item quantity="other">%1$s scooter-biler</item>
+    </plurals>
+    <plurals name="ticket_type_snowmobile_TEMPLATE">
+        <item quantity="one">%1$s snøscooter</item>
+        <item quantity="other">%1$s snøscootere</item>
+    </plurals>
+    <plurals name="ticket_type_day_TEMPLATE">
+        <item quantity="one">%1$s dag</item>
+        <item quantity="other">%1$s dager</item>
+    </plurals>
+    <plurals name="ticket_type_bike_TEMPLATE">
+        <item quantity="one">%1$s sykkel</item>
+        <item quantity="other">%1$s sykler</item>
+    </plurals>
+    <plurals name="ticket_type_week_TEMPLATE">
+        <item quantity="one">%1$s uke</item>
+        <item quantity="other">%1$s uker</item>
+    </plurals>
+    <plurals name="ticket_type_subscription_TEMPLATE">
+        <item quantity="one">%1$s abonnement</item>
+        <item quantity="other">%1$s abonnementer</item>
+    </plurals>
+    <plurals name="ticket_type_electric_bike_TEMPLATE">
+        <item quantity="one">%1$s elektrisk sykkel</item>
+        <item quantity="other">%1$s elektriske sykler</item>
+    </plurals>
+    <plurals name="ticket_type_segway_TEMPLATE">
+        <item quantity="one">%1$s segway</item>
+        <item quantity="other">%1$s stk. segway</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_TEMPLATE">
+        <item quantity="one">%1$s kjøretøy</item>
+        <item quantity="other">%1$s kjøretøy</item>
+    </plurals>
     <!-- Activity search results per ticket type -->
     <string name="per_ticket_type_traveler">per reisende</string>
     <string name="per_ticket_type_adult">per voksen</string>
@@ -361,7 +538,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">Søket ditt ga ingen resultater. Prøv å søke på nytt med andre søkekriterer.</string> 
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">Søket ga ingen resultater. Prøv å søke på nytt med andre søkekriterer.</string> 
+    <string name="error_lx_current_location_search_message">Vi kunne ikke finne din nåværende posisjon, så vi kan ikke finne aktiviteter rundt deg.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Feil</string>
     <!-- Text for error toolbar-->
@@ -380,8 +557,6 @@
     <string name="lx_traveler_enter_details_text">Oppgi kontaktdetaljer</string>
     <!-- Text for lx sort and filter-->
     <string name="lx_sort_filter">Sorter og filtrer</string>
-    <!-- Read more of the review -->
-    <string name="lx_details_read_more">Les mer</string>
     <!--Price sort button -->
     <string name="lx_price_sort_button">Pris</string>
     <!-- Popularity sort button -->
@@ -392,8 +567,20 @@
     <string name="lx_free_cancellation">Gratis avbestilling</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
     <string name="lx_does_not_accept_cardtype_TEMPLATE">%1$s ikke godkjent</string>
-    <!-- Edit search toolbar title -->
-    <string name="edit_search_toolbar">Rediger søk</string>
+    <!-- LX Error Activity Price Changed -->
+    <string name="lx_error_price_changed">Prisen på denne aktiviteten er endret. Prøv å bestille på nytt.</string>
+    <!-- LX confirmation itin text -->
+    <string name="lx_successful_checkout_email_label">Billettene dine er blitt sendt til</string>
+    <!-- LX reservation confirmation text -->
+    <string name="lx_successful_checkout_reservation_label">Bestillingen din er bekreftet!</string>
+    <!-- Text for getting current location suggestion -->
+    <string name="lx_getting_current_location">Fastlegger posisjon…</string>
+    <!-- LX Error Fetching activity details -->
+    <string name="lx_error_details">Kunne ikke hente detaljer. Prøv på nytt.</string>
+    <!-- Current location failed toolbar text -->
+    <string name="lx_error_current_location_toolbar_text">Prøv på nytt</string>
+    <!-- LX No Activities for Current location -->
+    <string name="lx_error_current_location_no_results">Vi kunne ikke finne noen aktiviteter nær deg. Prøv å søke på nytt med andre søkekriterer.</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -486,6 +673,15 @@
         <item quantity="many">Elementer i reisen</item>
         <item quantity="other">Elementer i reisen</item>
     </plurals>
+
+    <!-- LX Sort & Filter "Apply" header -->
+    <string name="lx_apply_sort_filter">Benytt</string>
+    <!-- LX Sort & Filter "Sort By" section header -->
+    <string name="lx_sort_by">Sorter etter</string>
+    <!-- LX Sort & Filter "Categories" header -->
+    <string name="lx_categories">Kategorier</string>
+    <!-- LX Sort & Filter "Filter" header -->
+    <string name="lx_filter">Filtrer</string>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -676,6 +872,8 @@
     <string name="nav_hotels">Hoteller</string>
     <!-- Cars -->
     <string name="nav_cars">Leiebil</string>
+    <!-- Activities -->
+    <string name="nav_lx">Aktiviteter</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -686,21 +884,15 @@
     <string name="percent_off_TEMPLATE">-%2.0f%%</string>
     <!-- List loading header -->
     <string name="loading_header">Laster…</string>
-    <!-- Hotel list rating text -->
+    <!-- Hotel launch list rating text -->
     <string name="hotel_rating_text">av 5 – gjestevurdering</string>
-    <!-- Hotel list no rating text -->
-    <string name="hotel_no_rating_text">Ingen gjestevurdering</string>
+    <!-- Hotel search list rating text -->
+    <string name="hotel_search_rating_text">av 5</string>
     <!-- Expedia Deal for a given property, Mobile exclusive -->
     <string name="launch_mobile_exclusive">Kun på mobil!</string>
     <!-- Expedia Deal for a given property, tonight only -->
     <string name="launch_tonight_only">Kun i kveld!</string>
 
-
-    <!-- Launch screen -->
-    <!-- Label for flight destination tile from launch screen e.g. Fly to San Francisco -->
-    <string name="launch_flight_tile_prompt">&lt;font color="#b2b2b2"&gt;Fly til&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
-    <!-- Label for hotel destination tile from launch screen e.g. Stay in New York -->
-    <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;Bo i&lt;/font&gt;&lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">Beklager, det er ikke mulig å koble til.</string>
     <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
@@ -765,8 +957,8 @@
     <!-- Itineraries -->
     <!-- Itinerary -->
     <string name="itinerary">Reiserute</string>
-    <!-- Shop -->
-    <string name="shop">Søk</string>
+    <!-- Shop Travel - used on launch screen tab, so can't be too long -->
+    <string name="shop_travel">Se etter reise</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Finn reiserute</string>
     <!-- Enter Itinerary Details -->
@@ -788,7 +980,7 @@
     <!-- Error fetching itinerary -->
     <string name="itinerary_fetch_error">Feil ved henting av reiseruter</string>
     <!-- Sign in for your trips -->
-    <string name="sign_in_for_your_trips">&lt;b&gt;Logg på&lt;/b&gt; for å se reisene dine</string>
+    <string name="sign_in_for_your_trips">Logg på for å se reisene dine</string>
     <!-- String for Tomorrow as in "Marriott Grand Hotel - Tomorrow" -->
     <string name="tomorrow">I morgen</string>
     <!-- String for Today as in "Marriott Grand Hotel - Today" -->
@@ -1863,8 +2055,12 @@
     <string name="itinerary_confirmation_TEMPLATE">Reiserutenr. %s ble sendt til</string>
     <!-- Title for section helping users get hotel rooms after booking a flight -->
     <string name="get_a_room">Bestill et rom</string>
+    <!-- Title for section helping users get hotel rooms and cars after booking a flight -->
+    <string name="add_to_your_trip">Legg til reisen din</string>
     <!-- Button label for getting hotels at a particular location.  %s is a location, e.g. "Hotels in San Francisco" -->
     <string name="hotels_in_TEMPLATE">Hoteller i %s</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
+    <string name="cars_in_TEMPLATE">Biler i %s</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">Annet</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
@@ -2509,7 +2705,7 @@
 
     <!-- Expedia Accounts -->
     <!-- Label for menu item to sign into account -->
-    <string name="sign_in">Logg inn</string>
+    <string name="sign_in">Logg på</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">Tjen opp poeng og bestill hurtig.</string>
     <!-- Hint for user to enter password into a field -->
