--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -100,12 +100,6 @@
     <string name="drop_off_time_label">Devolução</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
     <string name="drop_off_same_as_pick_up">Em breve! Estamos trabalhando para adicionar viagens só de ida em uma versão futura.</string>
-    <!-- Error messge for missing Origin in search form -->
-    <string name="error_missing_origin_param">Faltam informações sobre a origem</string>
-    <!-- Error messge for missing Start date in search form -->
-    <string name="error_missing_start_date_param">Faltam informações sobre a data inicial</string>
-    <!-- Error messge for missing End date date in search form -->
-    <string name="error_missing_end_date_param">Faltam informações sobre a data final</string>
     <!-- Car search error -->
     <string name="error_car_search_message">Sua busca não obteve resultados. Tente novamente usando outros critérios de busca.</string>
     <!-- Checkout -->
@@ -149,8 +143,6 @@
     <string name="successful_checkout_email_label">Itinerário enviado para</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Indicações para %1$s</string>
-    <!-- Button label for calling customer support -->
-    <string name="call_customer_support">Ligar para o Atendimento ao Cliente</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -216,8 +208,6 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget location hint -->
-    <string name="lx_search_location_hint">Inserir local</string>
     <!-- Search widget header text -->
     <string name="lx_search_widget_heading">Localização e datas</string>
     <!-- Button to show calendar and selected dates -->
@@ -234,18 +224,18 @@
     <string name="exclusions_activity_details">Exclusões</string>
     <!-- Activity details know before you book heading -->
     <string name="know_before_you_book_activity_details">Informe-se antes de reservar</string>
-    <!-- Activity details cancellation heading -->
-    <string name="cancellation_activity_details">Cancelamento</string>
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
+    <!-- Template for ticket details without restrictions (eg: $40 Traveler) -->
+    <string name="ticket_details_no_restriction_TEMPLATE">%1$s %2$s</string>
     <!-- Template for ticket selection summary -->
-    <string name="offer_book_now_TEMPLATE">Reserve agora %1$s</string>
-    <!-- Template for tickets type and count  summary -->
-    <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
+    <string name="offer_book_now_TEMPLATE">Reserve %1$s</string>
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
     <string name="cancellation_policy_TEMPLATE">O cancelamento é grátis até %1$s antes do início da reserva. Após esse limite, não serão realizados cancelamentos, alterações ou reembolsos.</string>
+    <!-- Cancellation policy text for non-cancellable activities -->
+    <string name="lx_policy_non_cancellable">Esta reserva não é reembolsável e não poderá ser alterada ou cancelada quando for feita.</string>
     <!-- LX checkout cost breakdown total due today -->
     <string name="lx_cost_breakdown_due_today">Devido hoje</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -256,6 +246,8 @@
     <string name="lx_checkout_breakdown_price_disclaimer_text">Tarifas cotadas em %s.</string>
     <!-- Checkout price breakdown Total Price Label -->
     <string name="checkout_breakdown_total_price">Preço total</string>
+    <!-- Text for error toolbar-->
+    <string name="lx_price_change_text">O preço mudou</string>
     <!-- LX Ticket type names -->
     <string name="ticket_type_traveler">Viajante</string>
     <string name="ticket_type_adult">Adulto</string>
@@ -303,6 +295,191 @@
     <string name="ticket_type_electric_bike">Bicicleta elétrica</string>
     <string name="ticket_type_segway">Segway</string>
     <string name="ticket_type_vehicle">Veículo</string>
+    <!-- LX Ticket type Plurals -->
+    <plurals name="ticket_type_traveler_TEMPLATE">
+        <item quantity="one">%1$s viajante</item>
+        <item quantity="other">%1$s viajantes</item>
+    </plurals>
+    <plurals name="ticket_type_adult_TEMPLATE">
+        <item quantity="one">%1$s adulto</item>
+        <item quantity="other">%1$s adultos</item>
+    </plurals>
+    <plurals name="ticket_type_child_TEMPLATE">
+        <item quantity="one">%1$s criança</item>
+        <item quantity="other">%1$s crianças</item>
+    </plurals>
+    <plurals name="ticket_type_infant_TEMPLATE">
+        <item quantity="one">%1$s bebê</item>
+        <item quantity="other">%1$s bebês</item>
+    </plurals>
+    <plurals name="ticket_type_youth_TEMPLATE">
+        <item quantity="one">%1$s adolescente</item>
+        <item quantity="other">%1$s adolescentes</item>
+    </plurals>
+    <plurals name="ticket_type_senior_TEMPLATE">
+        <item quantity="one">%1$s idoso</item>
+        <item quantity="other">%1$s idosos</item>
+    </plurals>
+    <plurals name="ticket_type_group_TEMPLATE">
+        <item quantity="one">%1$s grupo</item>
+        <item quantity="other">%1$s grupos</item>
+    </plurals>
+    <plurals name="ticket_type_couple_TEMPLATE">
+        <item quantity="one">%1$s casal</item>
+        <item quantity="other">%1$s casais</item>
+    </plurals>
+    <plurals name="ticket_type_two_adults_TEMPLATE">
+        <item quantity="one">%1$s 2 adultos</item>
+        <item quantity="other">%1$s 2 adultos</item>
+    </plurals>
+    <plurals name="ticket_type_military_TEMPLATE">
+        <item quantity="one">%1$s militar</item>
+        <item quantity="other">%1$s militar</item>
+    </plurals>
+    <plurals name="ticket_type_student_TEMPLATE">
+        <item quantity="one">%1$s estudante</item>
+        <item quantity="other">%1$s estudantes</item>
+    </plurals>
+    <plurals name="ticket_type_sedan_TEMPLATE">
+        <item quantity="one">%1$s sedan</item>
+        <item quantity="other">%1$s sedans</item>
+    </plurals>
+    <plurals name="ticket_type_minivan_TEMPLATE">
+        <item quantity="one">%1$s minivan</item>
+        <item quantity="other">%1$s minivans</item>
+    </plurals>
+    <plurals name="ticket_type_water_taxi_TEMPLATE">
+        <item quantity="one">%1$s táxi aquático</item>
+        <item quantity="other">%1$s táxis aquáticos</item>
+    </plurals>
+    <plurals name="ticket_type_suv_TEMPLATE">
+        <item quantity="one">%1$s SUV</item>
+        <item quantity="other">%1$s SUVs</item>
+    </plurals>
+    <plurals name="ticket_type_executive_car_TEMPLATE">
+        <item quantity="one">%1$s carro executivo</item>
+        <item quantity="other">%1$s carros executivos</item>
+    </plurals>
+    <plurals name="ticket_type_luxury_car_TEMPLATE">
+        <item quantity="one">%1$s carro de luxo</item>
+        <item quantity="other">%1$s carros de luxo</item>
+    </plurals>
+    <plurals name="ticket_type_limousine_TEMPLATE">
+        <item quantity="one">%1$s limusine</item>
+        <item quantity="other">%1$s limusines</item>
+    </plurals>
+    <plurals name="ticket_type_towncar_TEMPLATE">
+        <item quantity="one">%1$s carro pequeno</item>
+        <item quantity="other">%1$s carros pequenos</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_parking_spot_TEMPLATE">
+        <item quantity="one">%1$s vaga de estacionamento de veículo</item>
+        <item quantity="other">%1$s vagas de estacionamento de veículo</item>
+    </plurals>
+    <plurals name="ticket_type_book_TEMPLATE">
+        <item quantity="one">%1$s reserva</item>
+        <item quantity="other">%1$s reservas</item>
+    </plurals>
+    <plurals name="ticket_type_guide_TEMPLATE">
+        <item quantity="one">%1$s guia</item>
+        <item quantity="other">%1$s guias</item>
+    </plurals>
+    <plurals name="ticket_type_travel_card_TEMPLATE">
+        <item quantity="one">%1$s cartão de viagem</item>
+        <item quantity="other">%1$s cartões de viagem</item>
+    </plurals>
+    <plurals name="ticket_type_boat_TEMPLATE">
+        <item quantity="one">%1$s barco</item>
+        <item quantity="other">%1$s barcos</item>
+    </plurals>
+    <plurals name="ticket_type_motorcycle_TEMPLATE">
+        <item quantity="one">%1$s motocicleta</item>
+        <item quantity="other">%1$s motocicletas</item>
+    </plurals>
+    <plurals name="ticket_type_ceremony_TEMPLATE">
+        <item quantity="one">%1$s cerimônia</item>
+        <item quantity="other">%1$s cerimônias</item>
+    </plurals>
+    <plurals name="ticket_type_calling_card_TEMPLATE">
+        <item quantity="one">%1$s cartão de chamada</item>
+        <item quantity="other">%1$s cartões de chamada</item>
+    </plurals>
+    <plurals name="ticket_type_pass_TEMPLATE">
+        <item quantity="one">%1$s passe</item>
+        <item quantity="other">%1$s passes</item>
+    </plurals>
+    <plurals name="ticket_type_minibus_TEMPLATE">
+        <item quantity="one">%1$s microônibus</item>
+        <item quantity="other">%1$s microônibus</item>
+    </plurals>
+    <plurals name="ticket_type_helicopter_TEMPLATE">
+        <item quantity="one">%1$s helicóptero</item>
+        <item quantity="other">%1$s helicópteros</item>
+    </plurals>
+    <plurals name="ticket_type_device_TEMPLATE">
+        <item quantity="one">%1$s dispositivo</item>
+        <item quantity="other">%1$s dispositivos</item>
+    </plurals>
+    <plurals name="ticket_type_room_TEMPLATE">
+        <item quantity="one">%1$s quarto</item>
+        <item quantity="other">%1$s quartos</item>
+    </plurals>
+    <plurals name="ticket_type_carriage_TEMPLATE">
+        <item quantity="one">%1$s carruagem</item>
+        <item quantity="other">%1$s carruagens</item>
+    </plurals>
+    <plurals name="ticket_type_buggy_TEMPLATE">
+        <item quantity="one">%1$s buggy</item>
+        <item quantity="other">%1$s buggies</item>
+    </plurals>
+    <plurals name="ticket_type_atv_TEMPLATE">
+        <item quantity="one">%1$s quadriciclo</item>
+        <item quantity="other">%1$s quadriciclos</item>
+    </plurals>
+    <plurals name="ticket_type_jet_ski_TEMPLATE">
+        <item quantity="one">%1$s moto aquática</item>
+        <item quantity="other">%1$s motos aquáticas</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_TEMPLATE">
+        <item quantity="one">%1$s scooter</item>
+        <item quantity="other">%1$s scooters</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_car_TEMPLATE">
+        <item quantity="one">%1$s carro scooter</item>
+        <item quantity="other">%1$s carros scooter</item>
+    </plurals>
+    <plurals name="ticket_type_snowmobile_TEMPLATE">
+        <item quantity="one">%1$s motoneve</item>
+        <item quantity="other">%1$s motoneves</item>
+    </plurals>
+    <plurals name="ticket_type_day_TEMPLATE">
+        <item quantity="one">%1$s dia</item>
+        <item quantity="other">%1$s dias</item>
+    </plurals>
+    <plurals name="ticket_type_bike_TEMPLATE">
+        <item quantity="one">%1$s bicicleta</item>
+        <item quantity="other">%1$s bicicletas</item>
+    </plurals>
+    <plurals name="ticket_type_week_TEMPLATE">
+        <item quantity="one">%1$s semana</item>
+        <item quantity="other">%1$s semanas</item>
+    </plurals>
+    <plurals name="ticket_type_subscription_TEMPLATE">
+        <item quantity="one">%1$s assinatura</item>
+        <item quantity="other">%1$s assinaturas</item>
+    </plurals>
+    <plurals name="ticket_type_electric_bike_TEMPLATE">
+        <item quantity="one">%1$s bicicleta elétrica</item>
+        <item quantity="other">%1$s bicicletas elétricas</item>
+    </plurals>
+    <plurals name="ticket_type_segway_TEMPLATE">
+        <item quantity="one">%1$s segway</item>
+        <item quantity="other">%1$s segways</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_TEMPLATE">
+        <item quantity="one">%1$s veículo</item>
+        <item quantity="other">%1$s veículos</item>
+    </plurals>
     <!-- Activity search results per ticket type -->
     <string name="per_ticket_type_traveler">por viajante</string>
     <string name="per_ticket_type_adult">por adulto</string>
@@ -361,7 +538,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">Sua busca não obteve resultados. Tente novamente usando outros critérios de busca.</string> 
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">Nenhum resultado disponível para seu local da busca atual. Tente novamente usando outros critérios de busca.</string> 
+    <string name="error_lx_current_location_search_message">Não foi possível determinar sua localização atual para encontrar atividades perto de você.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Erro</string>
     <!-- Text for error toolbar-->
@@ -380,8 +557,6 @@
     <string name="lx_traveler_enter_details_text">Insira os detalhes do viajante</string>
     <!-- Text for lx sort and filter-->
     <string name="lx_sort_filter">Organizar e filtrar</string>
-    <!-- Read more of the review -->
-    <string name="lx_details_read_more">Leia mais</string>
     <!--Price sort button -->
     <string name="lx_price_sort_button">Preço</string>
     <!-- Popularity sort button -->
@@ -392,8 +567,20 @@
     <string name="lx_free_cancellation">Cancelamento grátis</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
     <string name="lx_does_not_accept_cardtype_TEMPLATE">Não aceitamos %1$s</string>
-    <!-- Edit search toolbar title -->
-    <string name="edit_search_toolbar">Editar busca</string>
+    <!-- LX Error Activity Price Changed -->
+    <string name="lx_error_price_changed">O preço desta atividade mudou. Tente reservar novamente.</string>
+    <!-- LX confirmation itin text -->
+    <string name="lx_successful_checkout_email_label">Seus bilhetes foram enviados para</string>
+    <!-- LX reservation confirmation text -->
+    <string name="lx_successful_checkout_reservation_label">Sua reserva foi confirmada!</string>
+    <!-- Text for getting current location suggestion -->
+    <string name="lx_getting_current_location">Determinando localização…</string>
+    <!-- LX Error Fetching activity details -->
+    <string name="lx_error_details">Não foi possível obter detalhes. Tente novamente.</string>
+    <!-- Current location failed toolbar text -->
+    <string name="lx_error_current_location_toolbar_text">Tente novamente</string>
+    <!-- LX No Activities for Current location -->
+    <string name="lx_error_current_location_no_results">Não encontramos nenhuma atividade perto de você. Tente novamente usando outros critérios de busca.</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -486,6 +673,15 @@
         <item quantity="many">Itens incluídos na viagem</item>
         <item quantity="other">Itens incluídos na viagem</item>
     </plurals>
+
+    <!-- LX Sort & Filter "Apply" header -->
+    <string name="lx_apply_sort_filter">Aplicar</string>
+    <!-- LX Sort & Filter "Sort By" section header -->
+    <string name="lx_sort_by">Organizar por</string>
+    <!-- LX Sort & Filter "Categories" header -->
+    <string name="lx_categories">Categorias</string>
+    <!-- LX Sort & Filter "Filter" header -->
+    <string name="lx_filter">Filtrar</string>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -676,6 +872,8 @@
     <string name="nav_hotels">Hotéis</string>
     <!-- Cars -->
     <string name="nav_cars">Carros</string>
+    <!-- Activities -->
+    <string name="nav_lx">Atividades</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -686,21 +884,15 @@
     <string name="percent_off_TEMPLATE">-%2.0f%%</string>
     <!-- List loading header -->
     <string name="loading_header">Carregando…</string>
-    <!-- Hotel list rating text -->
+    <!-- Hotel launch list rating text -->
     <string name="hotel_rating_text">de 5 (classificação do hóspede)</string>
-    <!-- Hotel list no rating text -->
-    <string name="hotel_no_rating_text">Nenhuma classificação do hóspede</string>
+    <!-- Hotel search list rating text -->
+    <string name="hotel_search_rating_text">de 5</string>
     <!-- Expedia Deal for a given property, Mobile exclusive -->
     <string name="launch_mobile_exclusive">somente para dispositivos móveis!</string>
     <!-- Expedia Deal for a given property, tonight only -->
     <string name="launch_tonight_only">somente hoje!</string>
 
-
-    <!-- Launch screen -->
-    <!-- Label for flight destination tile from launch screen e.g. Fly to San Francisco -->
-    <string name="launch_flight_tile_prompt">&lt;font color="#b2b2b2"&gt;Voe para&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
-    <!-- Label for hotel destination tile from launch screen e.g. Stay in New York -->
-    <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;Fique em&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">Não é possível conectar.</string>
     <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
@@ -765,8 +957,8 @@
     <!-- Itineraries -->
     <!-- Itinerary -->
     <string name="itinerary">Itinerário</string>
-    <!-- Shop -->
-    <string name="shop">Reservar</string>
+    <!-- Shop Travel - used on launch screen tab, so can't be too long -->
+    <string name="shop_travel">Compre suas viagens</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">Buscar itinerário</string>
     <!-- Enter Itinerary Details -->
@@ -788,7 +980,7 @@
     <!-- Error fetching itinerary -->
     <string name="itinerary_fetch_error">Erro ao carregar itinerários</string>
     <!-- Sign in for your trips -->
-    <string name="sign_in_for_your_trips">&lt;b&gt;Conecte-se&lt;/b&gt; para ver suas viagens</string>
+    <string name="sign_in_for_your_trips">Conecte-se para ver suas viagens</string>
     <!-- String for Tomorrow as in "Marriott Grand Hotel - Tomorrow" -->
     <string name="tomorrow">Amanhã</string>
     <!-- String for Today as in "Marriott Grand Hotel - Today" -->
@@ -1863,8 +2055,12 @@
     <string name="itinerary_confirmation_TEMPLATE">No. do itinerário %s enviado para</string>
     <!-- Title for section helping users get hotel rooms after booking a flight -->
     <string name="get_a_room">Reserve um quarto</string>
+    <!-- Title for section helping users get hotel rooms and cars after booking a flight -->
+    <string name="add_to_your_trip">Adicionar a sua viagem</string>
     <!-- Button label for getting hotels at a particular location.  %s is a location, e.g. "Hotels in San Francisco" -->
     <string name="hotels_in_TEMPLATE">Hotéis em %s</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
+    <string name="cars_in_TEMPLATE">Carros em %s</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">Mais ações</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
