--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -100,12 +100,6 @@
     <string name="drop_off_time_label">还车</string>
     <!-- Label for showing users that drop-off location has to be same as pick-up location -->
     <string name="drop_off_same_as_pick_up">即将推出！我们正在努力，争取尽快添加单程预订功能。</string>
-    <!-- Error messge for missing Origin in search form -->
-    <string name="error_missing_origin_param">缺少出发地信息</string>
-    <!-- Error messge for missing Start date in search form -->
-    <string name="error_missing_start_date_param">缺少开始日期</string>
-    <!-- Error messge for missing End date date in search form -->
-    <string name="error_missing_end_date_param">缺少结束日期</string>
     <!-- Car search error -->
     <string name="error_car_search_message">您所做的搜索未返回任何结果。请选择其他标准，再搜索一次。</string>
     <!-- Checkout -->
@@ -149,8 +143,6 @@
     <string name="successful_checkout_email_label">行程单已发送至</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">前往%1$s的路线</string>
-    <!-- Button label for calling customer support -->
-    <string name="call_customer_support">致电客服</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -216,8 +208,6 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget location hint -->
-    <string name="lx_search_location_hint">输入位置</string>
     <!-- Search widget header text -->
     <string name="lx_search_widget_heading">日期和地点</string>
     <!-- Button to show calendar and selected dates -->
@@ -234,18 +224,18 @@
     <string name="exclusions_activity_details">不含的项目</string>
     <!-- Activity details know before you book heading -->
     <string name="know_before_you_book_activity_details">预订须知</string>
-    <!-- Activity details cancellation heading -->
-    <string name="cancellation_activity_details">取消</string>
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%2$s (%3$s) %1$s</string>
+    <!-- Template for ticket details without restrictions (eg: $40 Traveler) -->
+    <string name="ticket_details_no_restriction_TEMPLATE">%1$s %2$s</string>
     <!-- Template for ticket selection summary -->
     <string name="offer_book_now_TEMPLATE">立即预订 %1$s</string>
-    <!-- Template for tickets type and count  summary -->
-    <string name="ticket_summary_type_count_TEMPLATE">%1$s %2$s</string>
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
     <string name="cancellation_policy_TEMPLATE">如还没有开始使用，您可以在 %1$s 内免费取消。超出时限后，将无法取消、变更或退款。</string>
+    <!-- Cancellation policy text for non-cancellable activities -->
+    <string name="lx_policy_non_cancellable">此预订在确认后不可退款，也不得变更或取消。</string>
     <!-- LX checkout cost breakdown total due today -->
     <string name="lx_cost_breakdown_due_today">今天付款</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -256,6 +246,8 @@
     <string name="lx_checkout_breakdown_price_disclaimer_text">报价使用的是%s。</string>
     <!-- Checkout price breakdown Total Price Label -->
     <string name="checkout_breakdown_total_price">总价</string>
+    <!-- Text for error toolbar-->
+    <string name="lx_price_change_text">价格变更</string>
     <!-- LX Ticket type names -->
     <string name="ticket_type_traveler">旅客</string>
     <string name="ticket_type_adult">成人</string>
@@ -303,6 +295,191 @@
     <string name="ticket_type_electric_bike">电动自行车</string>
     <string name="ticket_type_segway">思维车</string>
     <string name="ticket_type_vehicle">车</string>
+    <!-- LX Ticket type Plurals -->
+    <plurals name="ticket_type_traveler_TEMPLATE">
+        <item quantity="one">%1$s 位旅客</item>
+        <item quantity="other">%1$s 位旅客</item>
+    </plurals>
+    <plurals name="ticket_type_adult_TEMPLATE">
+        <item quantity="one">%1$s 位成人</item>
+        <item quantity="other">%1$s 位成人</item>
+    </plurals>
+    <plurals name="ticket_type_child_TEMPLATE">
+        <item quantity="one">%1$s 名儿童</item>
+        <item quantity="other">%1$s 名儿童</item>
+    </plurals>
+    <plurals name="ticket_type_infant_TEMPLATE">
+        <item quantity="one">%1$s 名婴儿</item>
+        <item quantity="other">%1$s 名婴儿</item>
+    </plurals>
+    <plurals name="ticket_type_youth_TEMPLATE">
+        <item quantity="one">%1$s 名青少年</item>
+        <item quantity="other">%1$s 名青少年</item>
+    </plurals>
+    <plurals name="ticket_type_senior_TEMPLATE">
+        <item quantity="one">%1$s 位长者</item>
+        <item quantity="other">%1$s 位长者</item>
+    </plurals>
+    <plurals name="ticket_type_group_TEMPLATE">
+        <item quantity="one">%1$s 个团体</item>
+        <item quantity="other">%1$s 个团体</item>
+    </plurals>
+    <plurals name="ticket_type_couple_TEMPLATE">
+        <item quantity="one">%1$s 对情侣/夫妻</item>
+        <item quantity="other">%1$s 对情侣/夫妻</item>
+    </plurals>
+    <plurals name="ticket_type_two_adults_TEMPLATE">
+        <item quantity="one">%1$s 组 2 位成人</item>
+        <item quantity="other">%1$s 组 2 位成人</item>
+    </plurals>
+    <plurals name="ticket_type_military_TEMPLATE">
+        <item quantity="one">%1$s 位军人</item>
+        <item quantity="other">%1$s 位军人</item>
+    </plurals>
+    <plurals name="ticket_type_student_TEMPLATE">
+        <item quantity="one">%1$s 名学生</item>
+        <item quantity="other">%1$s 名学生</item>
+    </plurals>
+    <plurals name="ticket_type_sedan_TEMPLATE">
+        <item quantity="one">%1$s 辆四门轿车</item>
+        <item quantity="other">%1$s 辆四门轿车</item>
+    </plurals>
+    <plurals name="ticket_type_minivan_TEMPLATE">
+        <item quantity="one">%1$s 辆面包车</item>
+        <item quantity="other">%1$s 辆面包车</item>
+    </plurals>
+    <plurals name="ticket_type_water_taxi_TEMPLATE">
+        <item quantity="one">%1$s 辆水上出租车</item>
+        <item quantity="other">%1$s 辆水上出租车</item>
+    </plurals>
+    <plurals name="ticket_type_suv_TEMPLATE">
+        <item quantity="one">%1$s 辆 SUV</item>
+        <item quantity="other">%1$s 辆 SUV</item>
+    </plurals>
+    <plurals name="ticket_type_executive_car_TEMPLATE">
+        <item quantity="one">%1$s 辆行政级轿车</item>
+        <item quantity="other">%1$s 辆行政级轿车</item>
+    </plurals>
+    <plurals name="ticket_type_luxury_car_TEMPLATE">
+        <item quantity="one">%1$s 辆豪华车</item>
+        <item quantity="other">%1$s 辆豪华车</item>
+    </plurals>
+    <plurals name="ticket_type_limousine_TEMPLATE">
+        <item quantity="one">%1$s 辆豪华轿车</item>
+        <item quantity="other">%1$s 辆豪华轿车</item>
+    </plurals>
+    <plurals name="ticket_type_towncar_TEMPLATE">
+        <item quantity="one">%1$s 辆城市型车</item>
+        <item quantity="other">%1$s 辆城市型车</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_parking_spot_TEMPLATE">
+        <item quantity="one">%1$s 个停车位</item>
+        <item quantity="other">%1$s 个停车位</item>
+    </plurals>
+    <plurals name="ticket_type_book_TEMPLATE">
+        <item quantity="one">%1$s 本书</item>
+        <item quantity="other">%1$s 本书</item>
+    </plurals>
+    <plurals name="ticket_type_guide_TEMPLATE">
+        <item quantity="one">%1$s 本指南</item>
+        <item quantity="other">%1$s 本指南</item>
+    </plurals>
+    <plurals name="ticket_type_travel_card_TEMPLATE">
+        <item quantity="one">%1$s 张旅游卡</item>
+        <item quantity="other">%1$s 张旅游卡</item>
+    </plurals>
+    <plurals name="ticket_type_boat_TEMPLATE">
+        <item quantity="one">%1$s 艘船</item>
+        <item quantity="other">%1$s 艘船</item>
+    </plurals>
+    <plurals name="ticket_type_motorcycle_TEMPLATE">
+        <item quantity="one">%1$s 辆摩托车</item>
+        <item quantity="other">%1$s 辆摩托车</item>
+    </plurals>
+    <plurals name="ticket_type_ceremony_TEMPLATE">
+        <item quantity="one">%1$s 次典礼</item>
+        <item quantity="other">%1$s 次典礼</item>
+    </plurals>
+    <plurals name="ticket_type_calling_card_TEMPLATE">
+        <item quantity="one">%1$s 张电话卡</item>
+        <item quantity="other">%1$s 张电话卡</item>
+    </plurals>
+    <plurals name="ticket_type_pass_TEMPLATE">
+        <item quantity="one">%1$s 张通行证</item>
+        <item quantity="other">%1$s 张通行证</item>
+    </plurals>
+    <plurals name="ticket_type_minibus_TEMPLATE">
+        <item quantity="one">%1$s 辆小巴</item>
+        <item quantity="other">%1$s 辆小巴</item>
+    </plurals>
+    <plurals name="ticket_type_helicopter_TEMPLATE">
+        <item quantity="one">%1$s 架直升机</item>
+        <item quantity="other">%1$s 架直升机</item>
+    </plurals>
+    <plurals name="ticket_type_device_TEMPLATE">
+        <item quantity="one">%1$s 台设备</item>
+        <item quantity="other">%1$s 台设备</item>
+    </plurals>
+    <plurals name="ticket_type_room_TEMPLATE">
+        <item quantity="one">%1$s 间客房</item>
+        <item quantity="other">%1$s 间客房</item>
+    </plurals>
+    <plurals name="ticket_type_carriage_TEMPLATE">
+        <item quantity="one">%1$s 辆马车</item>
+        <item quantity="other">%1$s 辆马车</item>
+    </plurals>
+    <plurals name="ticket_type_buggy_TEMPLATE">
+        <item quantity="one">%1$s 辆童车</item>
+        <item quantity="other">%1$s 辆童车</item>
+    </plurals>
+    <plurals name="ticket_type_atv_TEMPLATE">
+        <item quantity="one">%1$s 辆全地形车</item>
+        <item quantity="other">%1$s 辆全地形车</item>
+    </plurals>
+    <plurals name="ticket_type_jet_ski_TEMPLATE">
+        <item quantity="one">%1$s 艘水上摩托艇</item>
+        <item quantity="other">%1$s 艘水上摩托艇</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_TEMPLATE">
+        <item quantity="one">%1$s 辆踏板摩托车</item>
+        <item quantity="other">%1$s 辆踏板摩托车</item>
+    </plurals>
+    <plurals name="ticket_type_scooter_car_TEMPLATE">
+        <item quantity="one">%1$s 辆小汽车</item>
+        <item quantity="other">%1$s 辆小汽车</item>
+    </plurals>
+    <plurals name="ticket_type_snowmobile_TEMPLATE">
+        <item quantity="one">%1$s 辆雪地摩托车</item>
+        <item quantity="other">%1$s 辆雪地摩托车</item>
+    </plurals>
+    <plurals name="ticket_type_day_TEMPLATE">
+        <item quantity="one">%1$s 天</item>
+        <item quantity="other">%1$s 天</item>
+    </plurals>
+    <plurals name="ticket_type_bike_TEMPLATE">
+        <item quantity="one">%1$s 辆自行车</item>
+        <item quantity="other">%1$s 辆自行车</item>
+    </plurals>
+    <plurals name="ticket_type_week_TEMPLATE">
+        <item quantity="one">%1$s 周</item>
+        <item quantity="other">%1$s 周</item>
+    </plurals>
+    <plurals name="ticket_type_subscription_TEMPLATE">
+        <item quantity="one">%1$s 次订阅</item>
+        <item quantity="other">%1$s 次订阅</item>
+    </plurals>
+    <plurals name="ticket_type_electric_bike_TEMPLATE">
+        <item quantity="one">%1$s 辆电动自行车</item>
+        <item quantity="other">%1$s 辆电动自行车</item>
+    </plurals>
+    <plurals name="ticket_type_segway_TEMPLATE">
+        <item quantity="one">%1$s 辆思维车</item>
+        <item quantity="other">%1$s 辆思维车</item>
+    </plurals>
+    <plurals name="ticket_type_vehicle_TEMPLATE">
+        <item quantity="one">%1$s 辆车</item>
+        <item quantity="other">%1$s 辆车</item>
+    </plurals>
     <!-- Activity search results per ticket type -->
     <string name="per_ticket_type_traveler">每位旅客</string>
     <string name="per_ticket_type_adult">每位成人</string>
@@ -361,7 +538,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">您所做的搜索未返回任何结果。请选择其他条件，再搜索一次。</string> 
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">对当前位置的搜索未返回任何结果。请选择其他条件，再搜索一次。</string> 
+    <string name="error_lx_current_location_search_message">我们无法确定您目前的位置以查找在您附近的活动。</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">错误</string>
     <!-- Text for error toolbar-->
@@ -380,8 +557,6 @@
     <string name="lx_traveler_enter_details_text">输入旅客信息</string>
     <!-- Text for lx sort and filter-->
     <string name="lx_sort_filter">筛选/排序</string>
-    <!-- Read more of the review -->
-    <string name="lx_details_read_more">更多信息</string>
     <!--Price sort button -->
     <string name="lx_price_sort_button">价格</string>
     <!-- Popularity sort button -->
@@ -392,8 +567,20 @@
     <string name="lx_free_cancellation">免费取消预订</string>
     <!-- Card brand not supported (e.g. "Visa not accepted") -->
     <string name="lx_does_not_accept_cardtype_TEMPLATE">不接受 %1$s</string>
-    <!-- Edit search toolbar title -->
-    <string name="edit_search_toolbar">编辑搜索设置</string>
+    <!-- LX Error Activity Price Changed -->
+    <string name="lx_error_price_changed">很抱歉，但此活动的价格已发生变化。请重新尝试预订。</string>
+    <!-- LX confirmation itin text -->
+    <string name="lx_successful_checkout_email_label">您的票已发送至</string>
+    <!-- LX reservation confirmation text -->
+    <string name="lx_successful_checkout_reservation_label">您的预订已经确认了！</string>
+    <!-- Text for getting current location suggestion -->
+    <string name="lx_getting_current_location">正在确定位置…</string>
+    <!-- LX Error Fetching activity details -->
+    <string name="lx_error_details">无法取得详细信息。请再试一次。</string>
+    <!-- Current location failed toolbar text -->
+    <string name="lx_error_current_location_toolbar_text">请再试一次。</string>
+    <!-- LX No Activities for Current location -->
+    <string name="lx_error_current_location_no_results">我们找不到任何在您附近的活动。请选择其他条件，再搜索一次。</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
@@ -484,8 +671,17 @@
         <item quantity="two">项旅行内容</item>
         <item quantity="few">项旅行内容</item>
         <item quantity="many">项旅行内容</item>
-        <item quantity="other">项旅行内容</item>
+        <item quantity="other">旅行内容</item>
     </plurals>
+
+    <!-- LX Sort & Filter "Apply" header -->
+    <string name="lx_apply_sort_filter">应用</string>
+    <!-- LX Sort & Filter "Sort By" section header -->
+    <string name="lx_sort_by">排序方式：</string>
+    <!-- LX Sort & Filter "Categories" header -->
+    <string name="lx_categories">类别</string>
+    <!-- LX Sort & Filter "Filter" header -->
+    <string name="lx_filter">筛选</string>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -676,6 +872,8 @@
     <string name="nav_hotels">酒店</string>
     <!-- Cars -->
     <string name="nav_cars">租车</string>
+    <!-- Activities -->
+    <string name="nav_lx">活动</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -686,21 +884,15 @@
     <string name="percent_off_TEMPLATE">-%2.0f%%</string>
     <!-- List loading header -->
     <string name="loading_header">正在加载…</string>
-    <!-- Hotel list rating text -->
+    <!-- Hotel launch list rating text -->
     <string name="hotel_rating_text">/5 - 住客评分</string>
-    <!-- Hotel list no rating text -->
-    <string name="hotel_no_rating_text">尚无住客评分</string>
+    <!-- Hotel search list rating text -->
+    <string name="hotel_search_rating_text">/5</string>
     <!-- Expedia Deal for a given property, Mobile exclusive -->
     <string name="launch_mobile_exclusive">仅限手机端！</string>
     <!-- Expedia Deal for a given property, tonight only -->
     <string name="launch_tonight_only">只限今晚！</string>
 
-
-    <!-- Launch screen -->
-    <!-- Label for flight destination tile from launch screen e.g. Fly to San Francisco -->
-    <string name="launch_flight_tile_prompt">&lt;font color="#b2b2b2"&gt;飞往&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
-    <!-- Label for hotel destination tile from launch screen e.g. Stay in New York -->
-    <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;&lt;font color="#b2b2b2"&gt;酒店&lt;/font&gt;</string>
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">很遗憾，我们无法建立连接。</string>
     <!-- Tablet. Header text when the device is not connected to internet/network unavailable. -->
@@ -765,8 +957,8 @@
     <!-- Itineraries -->
     <!-- Itinerary -->
     <string name="itinerary">行程</string>
-    <!-- Shop -->
-    <string name="shop">预订</string>
+    <!-- Shop Travel - used on launch screen tab, so can't be too long -->
+    <string name="shop_travel">旅游预订</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">查找行程</string>
     <!-- Enter Itinerary Details -->
@@ -788,7 +980,7 @@
     <!-- Error fetching itinerary -->
     <string name="itinerary_fetch_error">获取行程时出错</string>
     <!-- Sign in for your trips -->
-    <string name="sign_in_for_your_trips">&lt;b&gt;登录&lt;/b&gt;查看您的旅行信息</string>
+    <string name="sign_in_for_your_trips">登录查看您的旅行信息</string>
     <!-- String for Tomorrow as in "Marriott Grand Hotel - Tomorrow" -->
     <string name="tomorrow">明天</string>
     <!-- String for Today as in "Marriott Grand Hotel - Today" -->
@@ -1863,8 +2055,12 @@
     <string name="itinerary_confirmation_TEMPLATE">编号为 %s 的行程已发往</string>
     <!-- Title for section helping users get hotel rooms after booking a flight -->
     <string name="get_a_room">预订房间</string>
+    <!-- Title for section helping users get hotel rooms and cars after booking a flight -->
+    <string name="add_to_your_trip">加入旅行计划</string>
     <!-- Button label for getting hotels at a particular location.  %s is a location, e.g. "Hotels in San Francisco" -->
     <string name="hotels_in_TEMPLATE">%s的酒店</string>
+    <!-- Button label for getting cars at a particular location.  %s is a location, e.g. "Cars in San Francisco" -->
+    <string name="cars_in_TEMPLATE">在%s租车</string>
     <!-- Title for section helping users in other various ways -->
     <string name="more_actions">其他选择</string>
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
